fixed horizontal scrolling on html element

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ body {
 }
 
 @media (max-width: 576px) {
-	body {
+	body,
+	html {
 		margin: 0;
 		padding: 0;
 		overflow-x: hidden;
